menambahkan file html, css, js, py

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>halo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>databooks</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>hi hi</h1>
-    <h2>yo yo</h2>
+  <div class="container">
+    <h1>Data Books</h1>
+    
+    <!-- Input Form -->
+    <div id="input-container">
+      <input type="text" id="harga" placeholder="Harga">
+      <input type="text" id="penulis" placeholder="Penulis">
+      <input type="text" id="ISBN" placeholder="ISBN">
+      <input type="text" id="tahun" placeholder="Tahun">
+      <input type="text" id="judul" placeholder="Judul">
+      <button id="add-btn" onclick="addBook()">+</button>
+    </div>
+
+    <!-- Table to Display Data -->
+    <table id="data-table">
+      <!-- Table Header -->
+      <thead>
+        <tr>
+          <th>Harga</th>
+          <th>Penulis</th>
+          <th>ISBN</th>
+          <th>Tahun</th>
+          <th>Judul</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <!-- Table Body -->
+      <tbody id="table-body"></tbody>
+    </table>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
